<resources>
    <string name="app_name">PFEMyAdmin</string>

    <!-- String related to Drawer-->
    <string name="fragment_mySubject">My Subjects</string>
    <string name="fragment_all_subjects">All Subjects</string>
    <string name="fragment_my_jurys">My Juries</string>
    <string name="fragment_all_jurys">All Juries</string>
    <string name="fragment_sub_juries">Sub-Juries</string>
    <string name="category_user">User</string>
    <string name="fragment_directory">Directory</string>
    <string name="fragment_user">Profile</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_visitor">Visitor</string>
    <string name="notes">Marks</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_identification">These credentials are incorrects</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_login">Login</string>
    <string name="connected">online</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="emptyField">Not specified</string>
    <string name="title_activity_my_subjects">SubjectActivity</string>

    <string name="dialog_loading_title">Loading</string>
    <string name="dialog_loading_title_long">Loading, could take a while</string>
    <string name="dialog_loading">Please Wait ...</string>

    <string name="dialog_no_network">Connection timed out</string>
    <string name="dialog_try_again">Try again or contact your service support</string>
    <string name="home_visitor_access">Private Access</string>
    <string name="copyright">2018 - Lucas AMIAUD - Samuel KRASZEWSKI</string>

    <!--For rendering problems-->
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <string name="generate_sub_juries">Generate a sub-Jury</string>
    <string name="jurys">Juries</string>
    <string name="subjects">Subjects</string>

    <string name="title_activity_visitor">VisitorActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="no_team">Team undefined</string>
    <string name="txt_team">Team</string>
    <string name="txt_confidentiality">Confidentiality:</string>
    <string name="txt_supervisor">Supervisor:</string>
    <string name="txt_project_id">Project ID:</string>
    <string name="txt_caracteristics">Caracteristics</string>
    <string name="txt_the_poster">the poster</string>
    <string name="txt_date">Date:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_comment_poster">Write your comment about the poster</string>
    <string name="send_comment">Send comment</string>

</resources>
