<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/posterHeader"
                    android:contentDescription="@string/txt_the_poster" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/poster_comment"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:hint="@string/txt_comment_poster"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/comments_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:onClick="onClick"
                    android:background="@color/colorPrimaryDark"
                    android:padding="5dp"
                    android:layout_margin="10dp"
                    android:text="@string/send_comment"
                    android:textColor="@color/white" />

            </LinearLayout>

        </ScrollView>

</android.support.constraint.ConstraintLayout>
